fix: scrollbar in file import modal

--- a/src/styles/modals.less
+++ b/src/styles/modals.less
@@ -100,8 +100,9 @@
   .new-file-preview {
     max-height: 500px;
     max-width: 378px;
-    text-align: center;
     overflow: auto;
+    padding: 10px;
+    text-align: center;
 
     .new-file-preview-headline {
       text-align: left;
